fixed footer, properly aligning now

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -37,8 +37,10 @@ html, body {
 .footerz {
   background-color: rgb(23, 31, 21);
   border: solid 1px #8AABCC;
-  width: 100%;
-  height: 100%;
   padding: 20px;
   margin-top: 9px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
